--- a/wiki/cs/User_hub.html
+++ b/wiki/cs/User_hub.html
@@ -82,12 +82,8 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Material.svg&amp;filetimestamp=20240623140009&amp;.html" class="mw-file-description"><img src="../File/Workbench_Material.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Material_Workbench.html" title="Material Workbench">Pracovn&iacute; plocha Material</a> zpracov&aacute;v&aacute; syst&eacute;m materi&aacute;l&#367; FreeCADu. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Mesh.svg&amp;filetimestamp=20200404173024&amp;.html" class="mw-file-description"><img src="../File/Workbench_Mesh.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Mesh_Workbench.html" title="Mesh Workbench">Pracovn&iacute; plocha Mesh</a> pro pr&aacute;ci s troj&uacute;heln&iacute;kov&yacute;mi s&iacute;t&#283;mi.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_OpenSCAD.svg&amp;filetimestamp=20200404173116&amp;.html" class="mw-file-description"><img src="../File/Workbench_OpenSCAD.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../OpenSCAD_Workbench.html" title="OpenSCAD Workbench">Pracovn&iacute; plocha OpenSCAD</a> pro interoperabilitu s OpenSCADem a opravu historie model&#367; <a href="../Constructive_solid_geometry.html" title="Constructive solid geometry">konstruktivn&iacute; pevn&eacute; geometrie</a> (CSG). <code>D</code></li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Part.svg&amp;filetimestamp=20240712190040&amp;.html" class="mw-file-description"><img src="../File/Workbench_Part.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Part_Workbench.html" title="Part Workbench">Part Workbench</a> for working with geometric primitives and boolean operations.</li></ul>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Part.svg&amp;filetimestamp=20240712190040&amp;.html" class="mw-file-description"><img src="../File/Workbench_Part.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Workbench.html" title="Part Workbench">Pracovn&iacute; plocha Part</a> pro pr&aacute;ci s geometrick&yacute;mi primitivy a booleovsk&yacute;mi operacemi.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_PartDesign.svg&amp;filetimestamp=20240405092932&amp;.html" class="mw-file-description"><img src="../File/Workbench_PartDesign.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign Workbench</a> for building Part shapes from sketches.</li></ul>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Points.svg&amp;filetimestamp=20200404174800&amp;.html" class="mw-file-description"><img src="../File/Workbench_Points.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Points_Workbench.html" title="Points Workbench">Points Workbench</a>  for working with point clouds.</li></ul>
 </div>
@@ -186,13 +182,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115162628
+Cached time: 20260115162742
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.109 seconds
-Real time usage: 0.266 seconds
-Preprocessor visited node count: 314/1000000
+CPU time usage: 0.104 seconds
+Real time usage: 0.201 seconds
+Preprocessor visited node count: 312/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
 Highest expansion depth: 5/100
@@ -202,17 +198,17 @@ Unstrip post&#8208;expand size: 4294/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.934      1 -total
- 52.55%   14.678      1 Template:Userdocnavi/cs
- 17.89%    4.998      1 Template:Navigation_menu_2
-  9.62%    2.687      7 Template:Incode
-  9.18%    2.564      1 Template:TOCright
-  9.05%    2.529      3 Template:Version
-  6.62%    1.849      1 Template:Button
-  5.85%    1.635      2 Template:VersionMinus
+100.00%   14.488      1 -total
+ 37.07%    5.371      1 Template:Userdocnavi/cs
+ 16.45%    2.383      1 Template:Navigation_menu_2
+ 12.64%    1.831      3 Template:Version
+ 12.21%    1.769      1 Template:Button
+ 12.19%    1.767      2 Template:VersionMinus
+ 10.56%    1.530      1 Template:TOCright
+  8.96%    1.298      7 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115162628 and revision id 1738791. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115162742 and revision id 1738795. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
