--- a/wiki/cs/User_hub.html
+++ b/wiki/cs/User_hub.html
@@ -87,9 +87,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Points.svg&amp;filetimestamp=20200404174800&amp;.html" class="mw-file-description"><img src="../File/Workbench_Points.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Points_Workbench.html" title="Points Workbench">Pracovn&iacute; plocha Points</a>  pro pr&aacute;ci s mra&#269;ny bod&#367;.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Reverse_Engineering.svg&amp;filetimestamp=20200404173756&amp;.html" class="mw-file-description"><img src="../File/Workbench_Reverse_Engineering.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench">Pracovn&iacute; plocha Reverse Engineering</a> je ur&#269;ena k poskytov&aacute;n&iacute; specifick&yacute;ch n&aacute;stroj&#367; pro p&#345;evod tvar&#367;/t&#283;les/s&iacute;t&iacute; na parametrick&eacute; prvky kompatibiln&iacute; s FreeCADem.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Robot.svg&amp;filetimestamp=20200404173908&amp;.html" class="mw-file-description"><img src="../File/Workbench_Robot.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Robot_Workbench.html" title="Robot Workbench">Pracovn&iacute; plocha Robot</a> pro studium pohyb&#367; robot&#367;. V sou&#269;asn&eacute; dob&#283; nen&iacute; udr&#382;ov&aacute;na. <code>D</code></li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Sketcher.svg&amp;filetimestamp=20231231194727&amp;.html" class="mw-file-description"><img src="../File/Workbench_Sketcher.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher Workbench</a> for working with geometry-constrained sketches.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Sketcher.svg&amp;filetimestamp=20231231194727&amp;.html" class="mw-file-description"><img src="../File/Workbench_Sketcher.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Pracovn&iacute; plocha Sketcher</a> pro pr&aacute;ci s n&aacute;&#269;rtky s geometrick&yacute;mi omezen&iacute;mi.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Spreadsheet.svg&amp;filetimestamp=20240527155805&amp;.html" class="mw-file-description"><img src="../File/Workbench_Spreadsheet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Spreadsheet_Workbench.html" title="Spreadsheet Workbench">Spreadsheet Workbench</a> for creating and manipulating spreadsheet data.</li></ul>
 </div>
@@ -176,13 +174,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115163118
+Cached time: 20260115163209
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.109 seconds
-Real time usage: 0.194 seconds
-Preprocessor visited node count: 309/1000000
+CPU time usage: 0.137 seconds
+Real time usage: 0.309 seconds
+Preprocessor visited node count: 308/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
 Highest expansion depth: 5/100
@@ -192,17 +190,17 @@ Unstrip post&#8208;expand size: 4294/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.004      1 -total
- 37.29%    6.340      1 Template:Userdocnavi/cs
- 14.96%    2.543      3 Template:Version
- 14.75%    2.508      1 Template:Navigation_menu_2
- 11.53%    1.960      7 Template:Incode
- 10.76%    1.829      2 Template:VersionMinus
-  9.12%    1.551      1 Template:TOCright
-  9.12%    1.551      1 Template:Button
+100.00%   15.553      1 -total
+ 47.34%    7.363      1 Template:Userdocnavi/cs
+ 15.40%    2.395      1 Template:Navigation_menu_2
+ 12.08%    1.879      1 Template:TOCright
+  9.84%    1.531      7 Template:Incode
+  9.00%    1.399      3 Template:Version
+  7.99%    1.243      2 Template:VersionMinus
+  7.62%    1.185      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115163118 and revision id 1738803. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115163209 and revision id 1738805. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
