--- a/wiki/cs/User_hub.html
+++ b/wiki/cs/User_hub.html
@@ -88,9 +88,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Reverse_Engineering.svg&amp;filetimestamp=20200404173756&amp;.html" class="mw-file-description"><img src="../File/Workbench_Reverse_Engineering.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench">Pracovn&iacute; plocha Reverse Engineering</a> je ur&#269;ena k poskytov&aacute;n&iacute; specifick&yacute;ch n&aacute;stroj&#367; pro p&#345;evod tvar&#367;/t&#283;les/s&iacute;t&iacute; na parametrick&eacute; prvky kompatibiln&iacute; s FreeCADem.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Robot.svg&amp;filetimestamp=20200404173908&amp;.html" class="mw-file-description"><img src="../File/Workbench_Robot.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Robot_Workbench.html" title="Robot Workbench">Pracovn&iacute; plocha Robot</a> pro studium pohyb&#367; robot&#367;. V sou&#269;asn&eacute; dob&#283; nen&iacute; udr&#382;ov&aacute;na. <code>D</code></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Sketcher.svg&amp;filetimestamp=20231231194727&amp;.html" class="mw-file-description"><img src="../File/Workbench_Sketcher.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Pracovn&iacute; plocha Sketcher</a> pro pr&aacute;ci s n&aacute;&#269;rtky s geometrick&yacute;mi omezen&iacute;mi.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Spreadsheet.svg&amp;filetimestamp=20240527155805&amp;.html" class="mw-file-description"><img src="../File/Workbench_Spreadsheet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Spreadsheet_Workbench.html" title="Spreadsheet Workbench">Spreadsheet Workbench</a> for creating and manipulating spreadsheet data.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Spreadsheet.svg&amp;filetimestamp=20240527155805&amp;.html" class="mw-file-description"><img src="../File/Workbench_Spreadsheet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Spreadsheet_Workbench.html" title="Spreadsheet Workbench">Pracovn&iacute; plocha Spreadsheet</a> pro vytv&aacute;&#345;en&iacute; a manipulaci s daty v tabulk&aacute;ch.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Surface.svg&amp;filetimestamp=20210130230011&amp;.html" class="mw-file-description"><img src="../File/Workbench_Surface.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Surface_Workbench.html" title="Surface Workbench">Surface Workbench</a> provides tools to create and modify surfaces. It is similar to the <a href="../Part_Builder.html" title="Part Builder">Part Builder</a> Face from edges option.</li></ul>
 </div>
@@ -174,13 +172,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115163209
+Cached time: 20260115163311
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.137 seconds
-Real time usage: 0.309 seconds
-Preprocessor visited node count: 308/1000000
+CPU time usage: 0.141 seconds
+Real time usage: 0.252 seconds
+Preprocessor visited node count: 307/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
 Highest expansion depth: 5/100
@@ -190,17 +188,17 @@ Unstrip post&#8208;expand size: 4294/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.553      1 -total
- 47.34%    7.363      1 Template:Userdocnavi/cs
- 15.40%    2.395      1 Template:Navigation_menu_2
- 12.08%    1.879      1 Template:TOCright
-  9.84%    1.531      7 Template:Incode
-  9.00%    1.399      3 Template:Version
-  7.99%    1.243      2 Template:VersionMinus
-  7.62%    1.185      1 Template:Button
+100.00%   27.931      1 -total
+ 49.47%   13.818      1 Template:Userdocnavi/cs
+ 17.74%    4.954      1 Template:Navigation_menu_2
+ 10.39%    2.902      1 Template:TOCright
+  9.76%    2.727      7 Template:Incode
+  9.02%    2.520      2 Template:VersionMinus
+  8.17%    2.282      1 Template:Button
+  7.21%    2.014      3 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115163209 and revision id 1738805. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115163311 and revision id 1738807. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
